--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "framer-motion": "^11.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-scroll": "^1.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
